# tokyo-train-board

./: .csl_components.js  .gitignore  .jrboard_cfi.js  .jrboard_expand.js  .jrboard_expand_jr.js  .jrboard_statusline.js  .jrboard_workflow.js  LICENSE  README.en.md  README.ja.md  README.md  demo.tape  install.sh  main.py  pyproject.toml  test.py  yamanote_board.py
.github/workflows/: ci.yml  publish.yml
docs/: FEATURE-BLUEPRINT.md  INSTALL-UX-REVIEW.md  LIVE-DATA-APIS.md
integrations/csl/: jr-board.json  jr-board.sh  jr-status.json  jr-timetable.json  jr-timetable.sh
jrboard/: __init__.py  __main__.py  alerts.py  cache.py  claude_input.py  cli.py  commute.py  config.py  countdown.py  feeds.py  flap.py  gtfs_rt.py  install.py  journey.py  model.py  render.py  sources.py  statusline.py  timeline.py  tui.py  width.py
jrboard/csl/: __init__.py  jr-board.sh  jr-status.json  jr-status.sh  jr-timetable.json  jr-timetable.sh
jrboard/data/: asakusa.json  chiyoda.json  chuo.json  fukutoshin.json  ginza.json  hanzomon.json  hibiya.json  keihintohoku.json  kyoto-karasuma.json  kyoto-keihan.json  kyoto-randen.json  kyoto-sagano.json  kyoto-tozai.json  marunouchi.json  mita.json  namboku.json  oedo.json  osaka-loop.json  saikyo.json  (+13 more)
scripts/: apply_colors.py
tests/: test_alerts.py  test_claude_input.py  test_commute.py  test_config.py  test_countdown.py  test_feeds.py  test_flap.py  test_gtfs_rt.py  test_install.py  test_install_csl.py  test_journey.py  test_model.py  test_rate_limit_alert.py  test_render_golden.py  test_sources.py  test_statusline.py  test_timeline.py  test_tui.py  test_tui_extra.py  test_width.py
(+3 files in other folders)
